  (Houston Putman, Martijn Koster, Tim Potter, David Smiley, janhoy, Mike Drob)

* SOLR-15016: Replica placement plugins should use container plugins API / configs. (ab, ilan)

* SOLR-14034: Remove deprecated min_rf references (Tim Dillon)

* SOLR-14297: Replace commons-codec Base64 with JDK8 Base64 (Andras Salamon via Houston Putman)

Bug Fixes
---------------------
* SOLR-14546: Fix for a relatively hard to hit issue in OverseerTaskProcessor that could lead to out of order execution
  of Collection API tasks competing for a lock (Ilan Ginzburg).
  
==================  8.9.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------
(No changes)

Improvements
---------------------
* SOLR-15081: Metrics for a core: add SolrCloud "isLeader" and "replicaState".  (David Smiley)

Optimizations
---------------------
* SOLR-15079: Block Collapse - Faster collapse code when groups are co-located via Block Join style nested doc indexing.
  Used by default when field=_root_, or explicitly requested for other fields via hint=block.  (Joel Bernstein, hossman)

Bug Fixes
---------------------
* SOLR-15078: Fix ExpandComponent behavior when expanding on numeric fields to differentiate '0' group from null group (hossman)

Other Changes
---------------------
(No changes)

==================  8.8.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

Upgrade Notes
---------------------

* Internal logic for identifying 'Solr Home' has been refactored to make testing less error prone.  Plugin
  developers using SolrPaths.locateSolrHome() or 'new SolrResourceLoader' should check deprecation warnings as existing
  some existing functionality will be removed in 9.0.  See SOLR-14934 for more details.

New Features
---------------------

* SOLR-14907: Add v2 API for configSet upload, including single-file insertion. (Houston Putman)
